test.h

typedef struct __IncompleteArrayField_c_uchar {
  unsigned char _0[0];
} __IncompleteArrayField_c_uchar;
typedef struct cmsghdr {
  uintptr_t cmsg_len;
  int cmsg_level;
  int cmsg_type;
  struct __IncompleteArrayField_c_uchar __cmsg_data;
} cmsghdr;
typedef unsigned int __socklen_t;
typedef __socklen_t socklen_t;
typedef struct iovec {
  void *iov_base;
  uintptr_t iov_len;
} iovec;
typedef struct msghdr {
  void *msg_name;
  socklen_t msg_namelen;
  struct iovec *msg_iov;
  uintptr_t msg_iovlen;
  void *msg_control;
  uintptr_t msg_controllen;
  int msg_flags;
} msghdr;
typedef unsigned short sa_family_t;
typedef struct sockaddr {
  sa_family_t sa_family;
  char sa_data[14];
} sockaddr;
typedef uint32_t in_addr_t;
typedef struct in_addr {
  in_addr_t s_addr;
} in_addr;
typedef unsigned int _bindgen_ty_1;
typedef unsigned int _bindgen_ty_2;
typedef unsigned int _bindgen_ty_3;
#define MSG_OOB 1
#define MSG_PEEK 2
#define MSG_DONTROUTE 4
#define MSG_CTRUNC 8
#define MSG_PROXY 16
#define MSG_TRUNC 32
#define MSG_DONTWAIT 64
#define MSG_EOR 128
#define MSG_WAITALL 256
#define MSG_FIN 512
#define MSG_SYN 1024
#define MSG_CONFIRM 2048
#define MSG_RST 4096
#define MSG_ERRQUEUE 8192
#define MSG_NOSIGNAL 16384
#define MSG_MORE 32768
#define MSG_WAITFORONE 65536
#define MSG_BATCH 262144
#define MSG_ZEROCOPY 67108864
#define MSG_FASTOPEN 536870912
#define MSG_CMSG_CLOEXEC 1073741824
#define SCM_RIGHTS 1
#define SHUT_RD 0
#define SHUT_WR 1
#define SHUT_RDWR 2
extern struct cmsghdr *__cmsg_nxthdr(struct msghdr *__mhdr,
                                     struct cmsghdr *__cmsg);
extern int socket(int __domain, int __type, int __protocol);
extern int socketpair(int __domain, int __type, int __protocol, int *__fds);
extern int bind(int __fd, const struct sockaddr *__addr, socklen_t __len);
extern int getsockname(int __fd, struct sockaddr *__addr, socklen_t *__len);
extern int connect(int __fd, const struct sockaddr *__addr, socklen_t __len);
extern int getpeername(int __fd, struct sockaddr *__addr, socklen_t *__len);
extern intptr_t send(int __fd, const void *__buf, uintptr_t __n, int __flags);
extern intptr_t recv(int __fd, void *__buf, uintptr_t __n, int __flags);
extern intptr_t sendto(int __fd, const void *__buf, uintptr_t __n, int __flags,
                       const struct sockaddr *__addr, socklen_t __addr_len);
extern intptr_t recvfrom(int __fd, void *__buf, uintptr_t __n, int __flags,
                         struct sockaddr *__addr, socklen_t *__addr_len);
extern intptr_t sendmsg(int __fd, const struct msghdr *__message, int __flags);
extern intptr_t recvmsg(int __fd, struct msghdr *__message, int __flags);
extern int getsockopt(int __fd, int __level, int __optname, void *__optval,
                      socklen_t *__optlen);
extern int setsockopt(int __fd, int __level, int __optname,
                      const void *__optval, socklen_t __optlen);
extern int listen(int __fd, int __n);
extern int accept(int __fd, struct sockaddr *__addr, socklen_t *__addr_len);
extern int shutdown(int __fd, int __how);
extern int sockatmark(int __fd);
extern int isfdtype(int __fd, int __fdtype);